# zouni

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: dialog.rs  lib.rs  process.rs
src/platform/: gio.rs  mod.rs  win.rs
src/platform/linux/: clipboard.rs  device.rs  drag_drop.rs  fs.rs  fs_ext.rs  media.rs  mod.rs  shell.rs  util.rs  webkit.rs  widgets.rs
src/platform/windows/: clipboard.rs  device.rs  drag_drop.rs  fs.rs  guid.rs  media.rs  mod.rs  shell.rs  util.rs  webview2.rs
