[package]
name = "nonstd"
version = "0.1.0"
edition = "2021"
readme = "README.md"
categories = ["util"]
license = "MIT"
repository = "https://github.com/mrdkprj/nonstd"

[package.metadata.docs.rs]
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu"
]

[lib]
name = "nonstd"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0.145", features = ["derive"]}
mime_guess = "=2.0.5"
rfd = { version = "0.15", default-features = false, features = [
  "gtk3",
  "common-controls-v6",
] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
  "Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_Globalization",
  "Win32_System_DataExchange",
  "Win32_System_Ole",
  "Win32_Graphics_Gdi",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "implement",
  "Win32_UI_Shell_Common",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Imaging",
  "Management_Deployment",
  "ApplicationModel",
  "Foundation_Collections",
  "ApplicationModel_Core",
]

[target.'cfg(target_os = "windows")'.dependencies.windows-core]
version = "0.58.0"

[target.'cfg(target_os = "linux")'.dependencies.gio]
version = "0.18.4"
features = ["v2_70"]

[target.'cfg(target_os = "linux")'.dependencies.gtk]
version = "0.18.2"

[target.'cfg(target_os = "linux")'.dependencies.once_cell]
version = "1.19.0"

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
