[package]
name = "nonstd"
version = "0.1.0"
edition = "2021"
readme = "README.md"
categories = ["util"]
license = "MIT"
repository = "https://github.com/mrdkprj/nonstd"

[package.metadata.docs.rs]
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu"
]

[lib]
name = "nonstd"
path = "src/lib.rs"

[features]
default = []
"webview2" = ["dep:webview2-com", "dep:serde_json"]

[dependencies]
serde = {version = "1.0.145", features = ["derive"]}
mime_guess = "=2.0.5"
once_cell = "1.19.0"
async-std = "1.13.0"
shared_child = "=1.0.1"
rfd = { version = "0.15", default-features = false, features = [
  "gtk3",
  "common-controls-v6",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.0", features = [
  "Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_Globalization",
  "Win32_System_DataExchange",
  "Win32_System_Ole",
  "Win32_Graphics_Gdi",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_UI_Shell_Common",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Imaging",
  "Management_Deployment",
  "ApplicationModel",
  "Foundation_Collections",
  "ApplicationModel_Core",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_Media_MediaFoundation",
]}
windows-core = "0.61.0"
webview2-com = { version = "0.38", optional = true }
serde_json = { version = "1.0.140", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
gio = { version = "0.18", features = ["v2_72"]}
rusb = "0.9.4"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies.serde_json]
version = "1.0.140"

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
