[package]
name = "zouni"
version = "0.1.23"
edition = "2021"
description = "Variety of functions that `std` does not offer or `std` offers but are not satisfiable"
readme = "README.md"
categories = ["filesystem"]
license = "MIT"
repository = "https://github.com/mrdkprj/zouni"
documentation = "https://docs.rs/zouni/"

[package.metadata.docs.rs]
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu"
]

[lib]
name = "zouni"
path = "src/lib.rs"

[features]
default = []
"webview2" = ["dep:webview2-com", "dep:serde_json"]
"ffmpeg" = ["dep:ffmpeg-next"]

[dependencies]
serde = {version = "1.0.145", features = ["derive"]}
mime_guess = "=2.0.5"
smol = "2.0.2"
shared_child = "=1.0.1"
rfd = { version = "0.15", default-features = false, features = [
  "gtk3",
  "common-controls-v6",
] }
image = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.0", features = [
  "Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_Globalization",
  "Win32_System_DataExchange",
  "Win32_System_Ole",
  "Win32_Graphics_Gdi",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_UI_Shell_Common",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Imaging",
  "Management_Deployment",
  "ApplicationModel",
  "Foundation_Collections",
  "ApplicationModel_Core",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_Devices_DeviceAndDriverInstallation",
]}
windows-core = "0.61.0"
webview2-com = { version = "0.38", optional = true }
serde_json = { version = "1.0.140", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
gio = { version = "0.18", features = ["v2_72"]}
rusb = "0.9.4"
libc = "0.2"
serde_json = "1.0.140"
bstr = "1"
url = "2"
zbus = { version = "5", features = ["url"] }
ffmpeg-next = { version = "7.0.0", optional = true }

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
